--- a/templates/special/maintenance.html
+++ b/templates/special/maintenance.html
@@ -54,13 +54,13 @@
         <p>POWERED BY beat.bcn</p>
         <p>© 2016. All RIGHT RESERVED.</p>
         <div class="social">
-            <a class="btn btn-icon btn-round social-twitter" href="http://twitter.com/beatbcn">
+            <a href="http://twitter.com/beatbcn">
               <i class="icon bd-twitter" aria-hidden="true"></i>
             </a>
-            <a class="btn btn-icon btn-round social-facebook" href="http://facebook.com/beatdotbcn">
+            <a href="http://facebook.com/beatdotbcn">
               <i class="icon bd-facebook" aria-hidden="true"></i>
             </a>
-            <a class="btn btn-icon btn-round social-google-plus" href="https://plus.google.com/u/2/112406600943631572276/about">
+            <a href="https://plus.google.com/u/2/112406600943631572276/about">
               <i class="icon bd-google-plus" aria-hidden="true"></i>
             </a>
           </div>
