--- a/templates/attendance/attendanceentry_filter.html
+++ b/templates/attendance/attendanceentry_filter.html
@@ -113,6 +113,7 @@
           </table>
 
       {{ filter.form.as_p }}
+      {{ filter }}
 
           <nav>
                     <ul class="pagination">
