--- a/templates/special/maintenance.html
+++ b/templates/special/maintenance.html
@@ -50,7 +50,7 @@
     <div class="page-content vertical-align-middle">
       <i class="icon wb-settings icon-spin page-maintenance-icon" aria-hidden="true"></i>
       <h2>{% trans 'Under maintenance' %}</h2>
-      <p>{% trans 'IN SOME DAYS YOU WILL BE ABLE TO GET BACK TO BEMS' %}</p>
+      <p>DILLUNS PODREU TORNAR A UTILITZAR BEMS</p>
       <footer class="page-copyright">
         <p>POWERED BY beat.bcn</p>
         <p>© 2016. {% trans 'ALL RIGHTS RESERVED' %}.</p>
