--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -145,7 +145,7 @@
                 <img src="{{ user.bemsuser.get_profile_image }}" alt="...">
                 <i></i>
               </span>
-                            <span style="line-height: 30px; margin-left: 5px"> {{ user.first_name }} {{ user.last_name }} </span>
+                            <span style="line-height: 30px; margin-left: 5px"> {{ user.bemsuser }} </span>
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li role="presentation">
